refactor: main file modified for swagger docs
