# main.go
@@ -3,11 +3,12 @@ package main
 import (
 	"context"
 	"os"
+	"os/signal"
+	"syscall"
 
 	"github.com/gin-gonic/gin"
 	log "github.com/sirupsen/logrus"
 
-	// Swagger imports
 	"github.com/petmeds24/backend/config"
 	docs "github.com/petmeds24/backend/docs"
 	"github.com/petmeds24/backend/pkg/rest/src/middlewares"
@@ -16,69 +17,57 @@ import (
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
-// @title						Ovoyagers API
-// @version					0.01
-// @description				This is a backend server for Ovoyagers.
-// @termsOfService				http://swagger.io/terms/
-// @contact.name				Pet Care
-// @contact.url				https://google.com
-// @contact.email				azharuddinmohammed998@gmail.com
-// @license.name				Apache 2.0
-// @license.url				http://www.apache.org/licenses/LICENSE-2.0.html
-// @host						localhost:4000
-// @BasePath					/api/v1
-// @schemes					http https
-// @securityDefinitions.apiKey	BearerAuth
-// @in							header
-// @name						Authorization
-// @description				Type "Bearer " before your access token
 func main() {
-	// variables
-	var baseURL	string
-	var schema	string
-
-	// Set up context
-	ctx := context.Background()
+	ctx, stop := signal.NotifyContext(context.Background(), os.Interrupt, syscall.SIGTERM)
+	defer stop()
 
 	// Set up configuration
 	globalCfg := config.NewGlobalConfig(ctx)
 	cfg := globalCfg.GetConfig()
 
-	if cfg.ENVIRONMENT == "local" {
-		baseURL = "http://localhost:4000/api/v1"
-		schema = "http"
-	} else {
-		baseURL = "https://ovoyagers-web-backend.onrender.com/api/v1"
-		schema = "https"
-	}
+	baseURL, schema := GetBaseURLAndSchema(cfg)
+	UpdateSwaggerInfo(baseURL, schema)
 
 	// Set up Gin server
 	server := gin.Default()
-
-	// Middlewares
 	server.Use(middlewares.CorsMiddleware("*"))
 
 	// Set up routes
 	router := server.Group("/api/v1")
-
-	// Initialize the main route
 	mainRoute := routes.NewMainRoute(globalCfg, router)
+	mainRoute.SetupRoutes()
 
-	// Swagger configuration to serve the API docs
+	// Swagger configuration
 	server.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler, ginSwagger.PersistAuthorization(true), ginSwagger.URL(baseURL)))
-	docs.SwaggerInfo.Schemes = []string{schema}
+
 	// No route found
 	noRoute := routes.NewNoRoute()
 	server.NoRoute(noRoute.NoRouteFound)
 
-	// Set up routes
-	mainRoute.SetupRoutes()
-	log.Infof("Server is running on port %s with %s environment", cfg.PORT, cfg.ENVIRONMENT)
-	// Start the server and handle potential errors
-	if err := server.Run(":" + cfg.PORT); err != nil {
-		log.Fatalf("Failed to run server: %v", err)
-	}
+	// Log and start server
+	log.Infof("Server is running at %s://%s in %s environment", schema, baseURL, cfg.ENVIRONMENT)
+	go func() {
+		if err := server.Run(":" + cfg.PORT); err != nil {
+			log.Fatalf("Failed to run server: %v", err)
+		}
+	}()
+
+	<-ctx.Done()
+	log.Info("Shutting down gracefully...")
 }
+
+func UpdateSwaggerInfo(baseURL, schema string) {
+	docs.SwaggerInfo.Host = baseURL
+	docs.SwaggerInfo.Schemes = []string{schema}
+}
+
+func GetBaseURLAndSchema(cfg *config.Config) (string, string) {
+    if cfg.ENVIRONMENT == "local" {
+        return "http://localhost:4000/api/v1", "http"
+    }
+    return "https://ovoyagers-web-backend.onrender.com/api/v1", "https"
+}
+
 
 func init() {
 	gin.SetMode(gin.ReleaseMode)
@@ -89,7 +78,6 @@ func init() {
 			TimestampFormat: "2006-01-02 15:04:05",
 		},
 	)
-
 	log.SetOutput(os.Stdout)
 	log.SetLevel(log.InfoLevel)
 }
